# ba-daily-ops

./: .gitignore  CLAUDE.md  DESIGN.md
.agents/ba-daily-operators/ba-tools/: .gitignore  README.md  pyproject.toml
.agents/ba-daily-operators/ba-tools/ba-core/templates/: srs.md
.agents/ba-daily-operators/ba-tools/ba_tools/: __init__.py  __main__.py  citation.py  config.py  errors.py  hashing.py  lint.py  markdown_sections.py  output.py  repo.py  scaffold.py  srs_render.py  state_store.py
.agents/ba-daily-operators/ba-tools/ba_tools/commands/: __init__.py  byte_check.py  confirm_cmd.py  discovery_cmd.py  extract_uc.py  index_cmd.py  init_cmd.py  lint_reqs.py  mermaid_render_cmd.py  render_cmd.py  resolve_route.py  scan_cmd.py  state_cmd.py  template_cmd.py  trace_cmd.py  uc_status.py  verify_cmd.py
.agents/ba-daily-operators/ba-tools/tests/: conftest.py  test_byte_check.py  test_config.py  test_confirm.py  test_discovery.py  test_extract_uc.py  test_hashing.py  test_index.py  test_index_gate_predicate.py  test_init.py  test_lint_reqs.py  test_mermaid_author.py  test_mermaid_render_cmd.py  test_mermaid_trace_index.py  test_mockup_author.py  test_mockup_trace_index.py  test_output_contract.py  test_paths.py  test_render.py  test_resolve_route.py  test_scaffold_all_four_rows.py  test_scan.py  test_skill_schema.py  test_smoke.py  test_state.py  test_template.py  test_trace.py  test_uc_conductor_state.py  test_uc_conductor_workflow.py  test_uc_status.py  test_verify.py  test_workflow_contract.py
.agents/ba-daily-operators/ba-tools/tests/fixtures/: uc-001-test.md
(+160 files in other folders)
